[package]
name = "axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
tokio = {version = "1.42.0", features = ["full"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls"]}
dotenv = "0.15.0"