[package]
name = "axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.7.9", features = ["tracing","macros"]}
tokio = {version = "1.42.0", features = ["full"]}
tracing = "0.1.41"
tower-http = { version = "0.6.1", features = ["trace"] }
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls"]}
dotenv = "0.15.0"
uuidv4 = "1.0.0"